2006-03-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd.c
	* plug-ins/common/psd_save.c: converted shorts to gint16 and longs
	to gint32 to fix 64bit problems as reported in bug #335130.

2006-03-23  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c (siox_foreground_extract): fixed the potential
	problem that the cache wouldn't have been cleared correctly if
	both background and foreground areas are added at the same time.

2006-03-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/randomize.c: removed version number from dialog
	title, improved progress update.

2006-03-22  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/app.pl: removed support for invoke->pass_through.

	* tools/pdbgen/pdb/fileops.pdb: added a C utility function and
	call it from both register_load_handler() and
	register_magic_load_handler() instead of letting the generated
	invokers call each other.

	* app/pdb/fileops_cmds.c: regenerated.

2006-03-22  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/buffer.pdb
	* tools/pdbgen/pdb/color.pdb
	* tools/pdbgen/pdb/display.pdb
	* tools/pdbgen/pdb/drawable.pdb
	* tools/pdbgen/pdb/drawable_transform.pdb
	* tools/pdbgen/pdb/fileops.pdb
	* tools/pdbgen/pdb/font_select.pdb
	* tools/pdbgen/pdb/gimprc.pdb
	* tools/pdbgen/pdb/layer.pdb
	* tools/pdbgen/pdb/selection.pdb
	* tools/pdbgen/pdb/text_tool.pdb
	* tools/pdbgen/pdb/transform_tools.pdb: more perl stuff flattened,
	cleanup, nitpickyness.

	* app/pdb/buffer_cmds.c
	* app/pdb/color_cmds.c
	* app/pdb/display_cmds.c
	* app/pdb/drawable_cmds.c
	* app/pdb/layer_cmds.c
	* app/pdb/selection_cmds.c
	* libgimp/gimpselection_pdb.[ch]: regenerated.

2006-03-22  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c (siox_foreground_extract): fixed assertions and
	progress calculation.

2006-03-22  Simon Budig  <simon@gimp.org>

	* tools/pdbgen/pdb/paths.pdb: deprecated path_get_point_at_dist()

	* app/pdb/paths_cmds.c
	* libgimp/gimppaths_pdb.[ch]: regenerated.
