@@ -235,7 +235,7 @@ gimp_display_config_init (GimpDisplayConfig *config)
                     config);
 
   config->default_fullscreen_view =
-    g_object_new (GIMP_TYPE_DISPLAY_OPTIONS_FULLSCREEN, NULL);
+    g_object_new (GIMP_TYPE_DISPLAY_OPTIONS, NULL);
 
   g_signal_connect (config->default_fullscreen_view, "notify",
                     G_CALLBACK (gimp_display_config_fullscreen_notify),
